fix buttons hidden behind images

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,7 +9,8 @@ body {
 
 button {
   outline: none;
-  position: fixed;
+  margin-bottom: 10px;
+
   left: 0;
   top: 0;
   &.up {
